--- a/style.css
+++ b/style.css
@@ -16,9 +16,6 @@
   * {
     margin: 0;
   }
-  html, body {
-    height: 100%;
-  }
   img {
     display: block;
     max-width: 100%;
@@ -33,6 +30,7 @@
     place-items: center;
     font-size: 1rem;
     line-height: 1.5;
+    min-height: 100vh;
     font-family: 'Kumbh Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     background-image: url(images/bg-pattern-top.svg), 
@@ -45,9 +43,12 @@
   }
   .card {
     overflow: hidden;
-    width: 350px;
+    max-width: 350px;
     background-color: white;
     border-radius: 15px;
+    -moz-box-shadow:0px 6px 16px -8px var(--dark-desaturated-blue);
+    -webkit-box-shadow:0px 6px 16px -8px var(--dark-desaturated-blue);
+    box-shadow: 0px 6px 16px -8px var(--dark-desaturated-blue);
   }
   /* 
   ===================
@@ -61,7 +62,7 @@
     color: var(--dark-desaturated-blue);
   }
   .card-description h1 span,
-  .card-stats p {
+  .card-stats ul {
     font-size: 0.8em;
     font-weight: 400;
     color: var(--dark-gray);
@@ -83,8 +84,47 @@
   .card-description h1 {
     margin: 1em auto;
   }
-  .card-stats {
+  hr {
+    opacity: 0.3;
+  }
+  .card-stats ul {
     display: flex;
     justify-content: space-around;
     padding: 16px;
+    list-style: none;
+  }
+  /* 
+  ===================
+    Meddia Queries 
+  ===================
+  */
+  @media only screen and (min-width:400px) {
+    body {
+      background-position: left -156px top -219px ,
+                           right -176px bottom -193px;
+    }
+  }
+  @media only screen and (min-width:600px) {
+    body {
+      background-position: left -156px top -299px , 
+                        right -257px bottom -323px;
+    }
+  }
+  @media only screen and (min-width:900px) {
+    body {
+      background-position: left -225px top -299px , 
+                          right -229px bottom -422px
+    }
+  }
+  @media only screen and (min-width:1200px) {
+    body {
+      background-position: left -148px top -261px , 
+                          right -116px bottom -375px
+    }
+  }
+  @media only screen and (min-width:1500px) {
+    body {
+      background-position: left 0px top -290px , 
+                          right -48px bottom -337px
+    }
   }
